--- a/package.json
+++ b/package.json
@@ -36,5 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://marykim0115.github.io/momentum"
+  "homepage": "https://marykim0115.github.io/momentum1"
 }
